# mcp-forensic-toolkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py  test_server.py
.github/workflows/: ci.yml  python-ci.yml  python-test.yml
docs/: forensic_analysis_report.md
mcp_forensic_toolkit/: cli_demo.py  fastmcp.py  server.py
tests/: __init__.py  fastmcp.py  test_server.py
