[tool.poetry]
name = "mcp-forensic-toolkit"
version = "0.1.0"
description = "An MCP server exposing secure forensic tools for digital investigations."
authors = ["Aadithya <axdithya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "." }
]

[tool.poetry.dependencies]
python = ">=3.10"
pytest = ">=8.4.0"
python-dotenv = "*"
fastapi = "*"
uvicorn = "*"
typing-extensions = "*"  # good for compatibility

[tool.poetry.dev-dependencies]
pytest = ">=8.4.0"

[tool.poetry.classifiers]
"Programming Language :: Python :: 3"
"License :: OSI Approved :: MIT License"
"Operating System :: OS Independent"
"Topic :: Security"
"Intended Audience :: Developers"
"Development Status :: 3 - Alpha"