[tool.poetry]
name = "mcp-forensic-toolkit"
version = "0.1.0"
description = "An MCP server exposing secure forensic tools for digital investigations."
authors = ["Aadithya <axdithya@gmail.com>"]
readme = "README.md"

packages = [
    { include = "mcp_forensic_toolkit" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "*"
modelcontext = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.0"

# --- Added standard project metadata section for PEP 621 compliance ---
[project]
name = "mcp-forensic-toolkit"
version = "0.1.0"
description = "An MCP server exposing secure forensic tools for digital investigations."
authors = [
  {name = "Aadithya", email = "axdithya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "fastapi",
  "uvicorn",
  "typing-extensions",
  "uv (>=0.7.12,<0.8.0)",
  "mcp (>=1.9.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"